Application/Manifest/nexus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  labels:
    app: nexus
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: nexus
